--- a/428網構圖.md
+++ b/428網構圖.md
@@ -28,3 +28,6 @@ sudo nano /etc/netplan/00-installer-config-yaml
 ## ALP改IP  
 ![](https://i.imgur.com/txU3Fyc.png)
 
+## NAT功能  
+sudo iptables -t nat -A POSTROUTING -o eth0 ! -d 10.233.0.0/255.255.255.0 -j MASQUERADE  
+
