--- a/軟體貨櫃.md
+++ b/軟體貨櫃.md
@@ -25,3 +25,31 @@ sudo unshare --pid --fork --mount-proc --net --uts sh
 \$ sudo slirp4netns --configure  --disable-host-loopback   --mtu=65520 \$PID tap0  
 (然後開著讓它能執行)  
 
+
+---
+# 準備 Chroot 檔案系統目錄  
+\$ mkdir -p r2d2/rootfs/{bin,lib/x86_64-linux-gnu,lib64,usr/{bin,sbin},sbin,proc}  
+
+## 準備 Container 電腦的系統檔案及目錄  
+1. 查看sh目錄及相依檔  
+ \$ which sh  
+\$ ldd /bin/sh   
+2. 把sh的東西複製過去  
+$ cp /bin/sh  r2d2/rootfs/bin  
+$ cp /lib/ld-musl-x86_64.so.1  r2d2/rootfs/lib/  
+$ sudo chown -R root:root  r2d2/rootfs 
+4. :warning: 一定要把busybox的檔案也複製過去並下載  
+\$ sudo cp /bin/busybox  r2d2/rootfs/bin  
+\$ sudo unshare --pid --fork --mount-proc --uts -R r2d2/rootfs sh  
+:arrow_forward: [開啟container加上crhoot(-R)]  
+\# /bin/busybox --install -s  
+
+
+---
+
+
+
+
+ 
+
+
