--- a/軟體貨櫃.md
+++ b/軟體貨櫃.md
@@ -28,9 +28,10 @@ sudo unshare --pid --fork --mount-proc --net --uts sh
 
 ---
 # 準備 Chroot 檔案系統目錄  
+:bouquet: 先創造要使用的資料夾  
 \$ mkdir -p r2d2/rootfs/{bin,lib/x86_64-linux-gnu,lib64,usr/{bin,sbin},sbin,proc}  
 
-## 準備 Container 電腦的系統檔案及目錄  
+  
 1. 查看sh目錄及相依檔  
  \$ which sh  
 \$ ldd /bin/sh   
@@ -46,7 +47,8 @@ $ sudo chown -R root:root  r2d2/rootfs
 
 
 ---
-
+# Overlay2  
+ 
 
 
 
