--- a/軟體貨櫃.md
+++ b/軟體貨櫃.md
@@ -16,10 +16,10 @@
 
 ---
 
-sudo unshare --pid --fork --mount-proc --net --uts sh  
+\$ sudo unshare --pid --fork --mount-proc --net --uts sh  
 (--fork :允許繼續產生小孩，--mount :覆蓋掉原來的/proc，--net :只創造空間)  
 
-:radioactive_sign: 記得本機要做下列事項  
+:radioactive_sign: **記得本機要做下列事項**  
 \$ sudo apk add slirp4netns  
 \$ sudo modprobe tun  
 \$ sudo slirp4netns --configure  --disable-host-loopback   --mtu=65520 \$PID tap0  
@@ -28,7 +28,7 @@ sudo unshare --pid --fork --mount-proc --net --uts sh
 
 ---
 # 準備 Chroot 檔案系統目錄  
-:bouquet: 先創造要使用的資料夾  
+:bouquet: **先創造要使用的資料夾**  
 \$ mkdir -p r2d2/rootfs/{bin,lib/x86_64-linux-gnu,lib64,usr/{bin,sbin},sbin,proc}  
 
   
@@ -39,16 +39,74 @@ sudo unshare --pid --fork --mount-proc --net --uts sh
 $ cp /bin/sh  r2d2/rootfs/bin  
 $ cp /lib/ld-musl-x86_64.so.1  r2d2/rootfs/lib/  
 $ sudo chown -R root:root  r2d2/rootfs 
-4. :warning: 一定要把busybox的檔案也複製過去並下載  
+4. :warning: **一定要把busybox的檔案也複製過去並下載**  
 \$ sudo cp /bin/busybox  r2d2/rootfs/bin  
 \$ sudo unshare --pid --fork --mount-proc --uts -R r2d2/rootfs sh  
-:arrow_forward: [開啟container加上crhoot(-R)]  
+**[開啟container加上crhoot(-R)]**  
 \# /bin/busybox --install -s  
 
 
 ---
 # Overlay2  
- 
+:yum: 範例:  
+1.  $ mkdir upper lower merged work  
+\$ echo "I'm from lower!" > lower/in_lower.txt  
+\$ echo "I'm from upper!" > upper/in_upper.txt  
+\$ echo "I'm from lower!" > lower/in_both.txt  
+\$ echo "I'm from upper!" > upper/in_both.txt  
+***(先創造藥使用的目錄和檔案)***  
+2. \$ sudo mount -t overlay overlay -o lowerdir=/home/bigred/lower,upperdir=/home/bigred/upper,workdir=/home/bigred/work  /home/bigred/merged  
+***(mount -t overlay : 掛載三個資料夾到merged，wokdir:上下兩層的暫存區)***  
+3.  \$ cat merged/in_both.txt  
+I'm from upper!  
+***(發現both其實是看到up的，因為low的被擋住了) *** 
+4. \$ echo 'new file' > merged/new_file  
+\$ ls -l \*/new_file  
+-rw-r--r-- 1 bigred bigred 9 Apr 29 23:16   merged/new_file  
+-rw-r--r-- 1 bigred bigred 9 Apr 29 23:16   upper/new_file  
+***(加入到 merged 的檔案也會同時加到 upper )***  
+5.  \$ rm merged/in_both.txt  
+\$ ls -al merged/  
+........  
+-rw-r--r--  1 bigred bigred   16 Apr 29 23:12 in_lower.txt  
+-rw-r--r--  1 bigred bigred   16 Apr 29 23:13 in_upper.txt  
+-rw-r--r--  1 bigred bigred    9 Apr 29 23:16 new_file  
+\$ ls -al upper/  
+.......
+c---------  1 root   root   0, 0 Apr 29 23:17 in_both.txt  
+-rw-r--r--  1 bigred bigred   16 Apr 29 23:13 in_upper.txt  
+-rw-r--r--  1 bigred bigred    9 Apr 29 23:16 new_file  
+***(刪掉 both後會發現，merged 的確實被刪掉， upper 的檔案敘述變成 C ，表示現在已不是一個檔案，但是 lower 的還會存在)***  
+6.  \$ sudo umount merged/  
+\$ ls -al merged/  
+total 8  
+drwxr-sr-x  2 bigred bigred 4096 Apr 29 23:12 .  
+drwxr-sr-x 12 bigred bigred 4096 Apr 29 23:12 ..  
+***(想取消 mount 就打 umount 指令***)  
+
+
+---
+
+:wave: 
+重點提醒:  
+Union file system聯合檔案系統(只有兩層)  
+Merged : 掛載以下兩個目錄區   
+Upper : read & writer   
+Lower : read only  
+常用狀況為 :   
+upper 放 USB(硬碟)  
+lower 放 CD  
+
+
+---
+
+
+
+
+
+
+
+
 
 
 
