--- a/軟體貨櫃.md
+++ b/軟體貨櫃.md
@@ -19,7 +19,8 @@
 \$ sudo unshare --pid --fork --mount-proc --net --uts sh  
 (--fork :允許繼續產生小孩，--mount :覆蓋掉原來的/proc，--net :只創造空間)  
 
-:radioactive_sign: **記得本機要做下列事項**  
+:radioactive_sign:  
+**記得本機要做下列事項**  
 \$ sudo apk add slirp4netns  
 \$ sudo modprobe tun  
 \$ sudo slirp4netns --configure  --disable-host-loopback   --mtu=65520 \$PID tap0  
