--- a/軟體貨櫃.md
+++ b/軟體貨櫃.md
@@ -19,7 +19,7 @@
 \$ sudo unshare --pid --fork --mount-proc --net --uts sh  
 (--fork :允許繼續產生小孩，--mount :覆蓋掉原來的/proc，--net :只創造空間)  
 
-:radioactive_sign:  
+:warning:  
 **記得本機要做下列事項**  
 \$ sudo apk add slirp4netns  
 \$ sudo modprobe tun  
@@ -40,7 +40,7 @@
 $ cp /bin/sh  r2d2/rootfs/bin  
 $ cp /lib/ld-musl-x86_64.so.1  r2d2/rootfs/lib/  
 $ sudo chown -R root:root  r2d2/rootfs 
-4. :warning: **一定要把busybox的檔案也複製過去並下載**  
+3. :warning: **一定要把busybox的檔案也複製過去並下載**  
 \$ sudo cp /bin/busybox  r2d2/rootfs/bin  
 \$ sudo unshare --pid --fork --mount-proc --uts -R r2d2/rootfs sh  
 **[開啟container加上crhoot(-R)]**  
