--- a/軟體貨櫃.md
+++ b/軟體貨櫃.md
@@ -20,6 +20,9 @@
 (--fork :允許繼續產生小孩，--mount :覆蓋掉原來的/proc，--net :只創造空間)  
 
 :warning:  
+撥號給虛擬機  
+![](https://i.imgur.com/D73faI5.png)
+
 **記得本機要做下列事項**  
 \$ sudo apk add slirp4netns  
 \$ sudo modprobe tun  
