--- a/關聯式資料庫2.md
+++ b/關聯式資料庫2.md
@@ -1,7 +1,8 @@
 # 關聯式資料庫系統2  
 
 ---
-## :giraffe_face:  Mariadb   
+ 
+## :racehorse:  Mariadb   
 ### Ubuntu 安裝 mariaDB server  
 ```
 sudo apt update
@@ -107,7 +108,7 @@ IGNORE 3 ROWS;
 
 
 ---
-## :racehorse: 綜合練習 :   
+## 綜合練習 :   
 題目:  
 1. 將 exam.csv 匯入 mariadb   
 2. 請按配分權重(段一 30%.段二 30%，段三 30%，小考 10%)  
