--- a/關聯式資料庫2.md
+++ b/關聯式資料庫2.md
@@ -1,4 +1,4 @@
-# 關聯式資料庫系統2  
+# 關聯式資料庫系統 2  
 
 ---
  
@@ -62,10 +62,19 @@ Mariadb 預設顯示欄位標題
 
 ### :gear:  改 :   
 修改資料  
-\>update Table名 set 欄名=內容,欄名=內容,… where 條件 ;  
+\> update Table名 set 欄名=內容,欄名=內容,… where 條件 ;  
 ```
 >update Table01 set name='Judy',email='Judy@test.com' where id='6‘ ;
 ```
+改變欄位型態  
+\>alter table table名 modify 欄名 型態;  
+改變欄位名稱   
+\>alter table table名 change 原欄名 新欄名 資料型態;  
+新增欄位  
+\>alter table table名 add 欄名 型態;  
+刪除欄位  
+\>alter table table名  drop  欄名  
+
 ### :warning: 清 :   
 刪除表格內所有記錄 (表格內的表頭資訊還在,但內容都不見)  
 \> delete from Table名 ;  
@@ -78,24 +87,17 @@ Mariadb 預設顯示欄位標題
 \>drop table  Table名 ; (表格及記錄全刪)  
 \>delete from  Table名 ; (只刪除全部記錄)  
 
-改變欄位型態
-\>alter table table名 modify 欄名 型態;  
-改變欄位名稱   
-\>alter table table名 change 原欄名 新欄名 資料型態;  
-新增欄位  
-\>alter table table名 add 欄名 型態;  
-刪除欄位  
-\>alter table table名  drop  欄名  
+
 
 ### :icecream: 匯入:  
-LOAD DATA LOCAL INFILE  '/path/to/example.csv'   
+LOAD DATA LOCAL INFILE '/path/to/example.csv(檔案路徑)'   
 INTO TABLE table_name  
 CHARACTER SET UTF8  
 FIELDS TERMINATED BY ','  
 ENCLOSED BY '"'  
 LINES TERMINATED BY '\n'  
-IGNORE 1 ROWS
-(忽略來源資料的前幾列, 通常是用在不把表頭匯入此table中)  
+IGNORE 1 ROWS  
+(忽略來源資料的前幾列, 通常是用在不把表頭匯入此 table 中)  
 ```
 MariaDB [exam]> LOAD DATA LOCAL INFILE  '/home/bigred/examok.csv'
 INTO TABLE exam01
@@ -152,8 +154,97 @@ Records: 24  Deleted: 0  Skipped: 0  Warnings: 24
 7. select \* from exam01 order by avg(score1\*0.3+scoer2\*0.3+score3\*0.3+score4\*0.1) limit 3;  
 8. select round(avg(score1\*0.3+scoer2\*0.3+score3\*0.3+score4\*0.1),2) as avg from exam01;
 
+---
 
+## :racehorse:  Mariadb User
 
+### :hammer_and_wrench: 建 :  
+新增帳號  
+CREATE USER '新使用者'@'localhost' IDENTIFIED BY '新使用者密碼';  
 
+授權使用者權限  
+GRANT ALL PRIVILEGES ON *.* TO '使用者'@'localhost';  
 
+同時新增帳號、密碼並給予權限  
+GRANT ALL ON *.* TO '新使用者'@'localhost' IDENTIFIED BY '密碼' WITH GRANT OPTION;  
 
+### :lower_left_crayon: 列 :  
+列出所有使用者  
+SELECT User,Host FROM mysql.user;  
+
+列出使用者有哪些權限  
+SHOW GRANTS FOR '使用者'@'localhost';  
+
+### :gear:  改 :  
+要修改權限，基本上只能移除再新增，不過移除、修改權限時，不用擔心會干擾到線上運作，全部修改都會在  
+flush privileges 或 restart 時才會生效  
+
+1. 使用者登入後；自己改密碼  
+要修改的使用者本身先登入  
+\$ mariadb –u登入使用者 -p  
+\> SET PASSWORD FOR '登入使用者'@'主機' = PASSWORD('新密碼');  
+\> flush privileges;  
+2. 管理者變更使用者密碼  
+\$ sudo mariadb   
+\> SET PASSWORD FOR '登入使用者'@'主機' = PASSWORD('新密碼');  
+\> flush privileges;  
+3. 該使用者必須有 SUPER user 權限  
+\$ mysqladmin -u 使用者 -p'原密碼' password '新密碼'
+
+### :warning: 清 :  
+刪除使用者  
+DROP USER '既有使用者'@'localhost';  
+
+移除所有權限  
+revoke all privileges on *.* from '使用者'@'localhost';  
+
+### :arrow_right: 搭配 Bash Script 的練習範例  
+```
+#!/bin/bash
+while true
+do
+echo '
+1.建立批次帳號
+2.使用者給帳號密碼
+3.使用者修改密碼
+4.刪除使用者
+5.離開'
+read -p "選1-4" ans
+case $ans in
+1)
+read -p "建立user幾號開始" a1
+read -p "到user幾號結束" a2
+sudo mariadb -e "select user,host from mysql.user ;"
+for ((no=$a1;no<=$a2;no=no+1))
+do
+sudo mariadb -e "create user stu${no}@localhost identified by 'stu${no}';"
+sudo mariadb -e "GRANT ALL PRIVILEGES ON *.* TO stu$no@localhost;"
+done
+sudo mariadb -e "select user,host,select_priv from mysql.user;"
+;;
+2)
+read -p "user name" t1
+read -p "user password" t2
+sudo mariadb -e "create user $t1@localhost identified by '$t2';"
+[ $? = 0 ] && echo 成功 || echo 失敗
+sudo mariadb -e "select user,host,select_priv from mysql.user;"
+;;
+3)
+read -p "change user ?" a1
+read -p "new password?" a2
+sudo mariadb -e "set password for $a1@localhost= password('$a2');" &>/dev/null
+[ $? = 0 ] && echo "change finish" || echo "try again"
+;;
+4)
+read -p "刪除哪位 user" d1
+sudo mariadb -e "drop user '$d1'@'localhost';"
+;;
+5)
+break
+;;
+*)
+echo "請選1-5"
+;;
+esac
+done
+```
