--- a/關聯式資料庫.md
+++ b/關聯式資料庫.md
@@ -3,12 +3,13 @@
 
 ---
 # :baby_chick: SQLite  
-## Ubuntu 安裝  
+## Ubuntu 安裝 sqlite server  
 ```
 sudo apt-get install sqlite3 libsqlite3-dev
 ```
 
-基本語法 ：　SQLite 是不區分大小寫的，且所有的語句以分號（;）結束。　　
+基本語法 ：　SQLite 是不區分大小寫的，且所有的語句以分號（;）結束。
+
 進入sqlite3  
 \~$ sqlite3      
 退出(結束)  
@@ -19,7 +20,7 @@ sqlite>.quit
 
 1. 進入sqlite3並建立資料庫.db  
 bigred@ds159:~$ sqlite3 test01.db (一進去就先宣告資料庫名稱)  
-2. 切換資料庫  
+2. 切換(建立)資料庫  
 \>.open 資料庫名.db  
 3. 匯入表格  
 sqlite> .import   要載入的檔名.csv   table名稱  
@@ -45,7 +46,7 @@ values
 (欄名1內容,欄名2內容,欄名3內容,…),  
 (欄名1內容,欄名2內容,欄名3內容,…),…  ;  
 
-**複製目前資料庫,到指定的檔名** 
+**複製目前資料庫,到指定的檔名**   
 \>.clone  新資料庫名稱  
 \>.backup 新資料庫名稱  
 
@@ -86,9 +87,9 @@ values
 ```
 修改結構  
 新增欄位  
-\> ALTER TABLE Table名 ADD 欄名 型態;  
+\> alter table Table名 add 欄名 型態;  
 變更顯示模式  
-\>. Mode list或column或html或csv或ascii或insert或line或quote或或tabs或tcl  
+\>. mode list或column或html或csv或ascii或insert或line或quote或tabs或tcl  
 
 ### :warning: 清 :   
 刪除表格內所有記錄 (表格內的表頭資訊還在,但內容都不見)  
@@ -130,7 +131,7 @@ where "condition";
 select "欄位"   
 from "表格名"   
 where "簡單條件"   
-\{\[AND|OR] "簡單條件"}+ ;  
+\{\[and|or] "簡單條件"}+ ;  
 5. in   
 select "欄位"   
 from "表格名"   
@@ -140,9 +141,9 @@ select "欄位"
 from "表格名"   
 where "欄位" between '值1' and '值2';  
 7. like   
-SELECT "欄位"   
-FROM "表格名"   
-WHERE "欄位元" LIKE {模式};  
+select "欄位"   
+from "表格名"   
+where "欄位元" like {模式};  
 8. order by   
 select "欄位"   
 from "表格名"   
@@ -178,7 +179,7 @@ select * from 表格1 inner join 表格2 using (表格1&2的相同欄名) inner 
 
 >"order id"與"order date"不用特別打出是屬於哪張表格,因為系統會自己去判斷, 若不止1個表格有此欄位則需要宣告要使用哪一個表格。  
 "Product ID" from orderlist inner join...  
-orderlist是主要表格, 後面會在加上customer & product的表格內容。  
+orderlist是主要表格, 後面會再加上customer & product的表格內容。  
 
 ```
 sqlite> select "order id","order date",orderlist."Customer ID", customer."Customer ID", product. "Product ID",orderlist."Product ID" from orderlist inner join customer using (Customer ID) inner join Product using (Product ID);
@@ -273,7 +274,7 @@ sqlite> update member set id="005" where name="victor";
 6. sqlite> select count(*) from member;  
 7. sqlite> select count(*) from member where sex="M";  
 8. sqlite> select * from member where id="003";  
-9. sqlite> select tel,email from member where;   
+9. sqlite> select tel,email from member where name ="victor";   
 10. sqlite>.clone data01.db  
 11. sqlite>.open data01.db  
 12. sqlite> delete from member where id="003";  
