--- a/關聯式資料庫2.md
+++ b/關聯式資料庫2.md
@@ -64,7 +64,7 @@ Mariadb 預設顯示欄位標題
 修改資料  
 \> update Table名 set 欄名=內容,欄名=內容,… where 條件 ;  
 ```
->update Table01 set name='Judy',email='Judy@test.com' where id='6‘ ;
+>update Table01 set name='Judy',email='Judy@test.com' where id='6' ;
 ```
 改變欄位型態  
 \>alter table table名 modify 欄名 型態;  
@@ -145,7 +145,7 @@ Query OK, 24 rows affected, 24 warnings (0.001 sec)
 Records: 24  Deleted: 0  Skipped: 0  Warnings: 24
 
 ```
-2. MariaDB [exam]> select score1,score2,score3,score4,score1\*0.3+score2\*0.3+score3\*0.3+score4\*0.1 as "分數"from exam01 ;  
+2. MariaDB [exam]> select score1,score2,score3,score4,score1\*0.3+score2\*0.3+score3\*0.3+score4\*0.1 as "分數" from exam01 ;  
 
 3. select \* from exam01 order by score1 desc limit 3;  
 4. select count(\*) from exam01 where score2 between 85 and 95;  
@@ -163,10 +163,10 @@ Records: 24  Deleted: 0  Skipped: 0  Warnings: 24
 CREATE USER '新使用者'@'localhost' IDENTIFIED BY '新使用者密碼';  
 
 授權使用者權限  
-GRANT ALL PRIVILEGES ON *.* TO '使用者'@'localhost';  
+GRANT ALL PRIVILEGES ON \*.\* TO '使用者'@'localhost';  
 
 同時新增帳號、密碼並給予權限  
-GRANT ALL ON *.* TO '新使用者'@'localhost' IDENTIFIED BY '密碼' WITH GRANT OPTION;  
+GRANT ALL ON \*.\* TO '新使用者'@'localhost' IDENTIFIED BY '密碼' WITH GRANT OPTION;  
 
 ### :lower_left_crayon: 列 :  
 列出所有使用者  
@@ -196,7 +196,7 @@ flush privileges 或 restart 時才會生效
 DROP USER '既有使用者'@'localhost';  
 
 移除所有權限  
-revoke all privileges on *.* from '使用者'@'localhost';  
+revoke all privileges on \*.\* from '使用者'@'localhost';  
 
 ### :arrow_right: 搭配 Bash Script 的練習範例  
 ```
