--- a/關聯式資料庫2.md
+++ b/關聯式資料庫2.md
@@ -149,7 +149,7 @@ Records: 24  Deleted: 0  Skipped: 0  Warnings: 24
 
 3. select \* from exam01 order by score1 desc limit 3;  
 4. select count(\*) from exam01 where score2 between 85 and 95;  
-5. select count(\*) from exam01 where score3 between 75 and 85 order by score3 desc limit 3;  
+5. select \* from exam01 where score3 between 75 and 85 order by score3 desc limit 3;  
 6. select \* from exam01 order by avg(score1\*0.3+scoer2\*0.3+score3\*0.3+score4\*0.1) desc limit 3;  
 7. select \* from exam01 order by avg(score1\*0.3+scoer2\*0.3+score3\*0.3+score4\*0.1) limit 3;  
 8. select round(avg(score1\*0.3+scoer2\*0.3+score3\*0.3+score4\*0.1),2) as avg from exam01;
