--- a/關聯式資料庫.md
+++ b/關聯式資料庫.md
@@ -83,7 +83,7 @@ values
 修改資料  
 \>update Table名 set 欄名=內容,欄名=內容,… where 條件 ;  
 ```
->update Table01 set name='Judy',email='Judy@test.com' where id='6‘ ;
+>update Table01 set name='Judy',email='Judy@test.com' where id='6' ;
 ```
 修改結構  
 新增欄位  
